[tool.poetry]
name = "the-longest-word"
version = "0.1.0"
description = ""
authors = ["Mez Ukwuoma <mezdylan@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
pylint = "<3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
